Add movie service
